--- a/css/roundSelection.css
+++ b/css/roundSelection.css
@@ -41,7 +41,6 @@ h1{
 }
 
 #loading-text {
-    margin-top: 10px;
     font-size: 18px;
     color: #fbf9f9;
     font-weight: bold;
@@ -51,7 +50,7 @@ h1{
 }
 
 h1 {
-    margin-top: 10%;
+    margin-top: 5%;
     font-size: 36px;
     margin-bottom: 20px;
 }
@@ -65,6 +64,7 @@ h1 {
 .file {
     border: 2px solid #fff;
     padding: 10px;
+    cursor: pointer;
 }
   
 .file img {
@@ -97,7 +97,35 @@ h1 {
   
 .instructions p {
     font-size: 28px;
-    margin: 10px 0;
+    margin-top: 5px;
     color: rgb(33, 150, 33);
+}
+
+#instructionPage {
+    display: none;
+    background-color: #3a6ea6;
+    padding: 20px;
+    border: 1px solid #ccc;
+    width: 80%;
+    margin: 20px auto;
+    text-align: center;
+}
+
+#instructionPage p {
+    margin-top: 10px;
+}
+
+#showButton, #hideButton {
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 10px;
+}
+
+#showButton:hover, #hideButton:hover {
+    background-color: #0056b3;
 }
   
